# backend/Sources/Server/APIs/Admin/Auth/Credential/AdminAPI+UserCredentialFilters.swift
@@ -1,0 +1,14 @@
+import AdminOpenAPI
+
+extension AdminAPI {
+
+    func userCredentialFilters(
+        _ input: Operations.UserCredentialFilters.Input
+    ) async throws -> Operations.UserCredentialFilters.Output {
+        .ok(
+            .init(
+                body: .json(.init())
+            )
+        )
+    }
+}
