# openapi/openapi/admin@v3_1_0.yaml
@@ -7,6 +7,8 @@ tags:
   description: Authentication endpoints.
 - name: UserAccounts
   description: User accounts related endpoints.
+- name: UserCredentials
+  description: Manage user credentials.
 - name: UserRoles
   description: Manage user roles.
 - name: UserRolePermissions
@@ -285,6 +287,144 @@ paths:
           description: UserAccount session deleted
         404:
           description: UserAccount session not found
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+      security:
+      - bearerAuth: []
+  /api/v1/admin/user/credential:
+    post:
+      tags:
+      - UserCredentials
+      operationId: userCredentialCreate
+      requestBody:
+        $ref: '#/components/requestBodies/UserCredentialRequestBody'
+      responses:
+        201:
+          $ref: '#/components/responses/UserCredentialDetailResponse'
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+      security:
+      - bearerAuth: []
+    delete:
+      tags:
+      - UserCredentials
+      operationId: userCredentialBulkDelete
+      requestBody:
+        $ref: '#/components/requestBodies/BulkDeleteRequestBody'
+      responses:
+        200:
+          $ref: '#/components/responses/BulkDeleteResponse'
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+      security:
+      - bearerAuth: []
+  /api/v1/admin/user/credential/filters:
+    get:
+      tags:
+      - UserCredentials
+      operationId: userCredentialFilters
+      responses:
+        200:
+          $ref: '#/components/responses/UserCredentialFiltersResponse'
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+      security:
+      - bearerAuth: []
+  /api/v1/admin/user/credential/search:
+    post:
+      tags:
+      - UserCredentials
+      operationId: userCredentialSearch
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserCredentialListItemSearchQuerySchema'
+        required: true
+      responses:
+        200:
+          $ref: '#/components/responses/UserCredentialListItemSearchSchemaSearchResponse'
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+      security:
+      - bearerAuth: []
+  /api/v1/admin/user/credential/{userCredentialId}:
+    get:
+      tags:
+      - UserCredentials
+      operationId: userCredentialGet
+      parameters:
+      - $ref: '#/components/parameters/UserCredentialIdParameter'
+      responses:
+        200:
+          $ref: '#/components/responses/UserCredentialDetailResponse'
+        404:
+          description: UserCredential not found
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+      security:
+      - bearerAuth: []
+    put:
+      tags:
+      - UserCredentials
+      operationId: userCredentialUpdate
+      parameters:
+      - $ref: '#/components/parameters/UserCredentialIdParameter'
+      requestBody:
+        $ref: '#/components/requestBodies/UserCredentialUpdateRequestBody'
+      responses:
+        200:
+          $ref: '#/components/responses/UserCredentialDetailResponse'
+        404:
+          description: UserCredential not found
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+      security:
+      - bearerAuth: []
+    delete:
+      tags:
+      - UserCredentials
+      operationId: userCredentialDelete
+      parameters:
+      - $ref: '#/components/parameters/UserCredentialIdParameter'
+      responses:
+        204:
+          description: UserCredential deleted
+        404:
+          description: UserCredential not found
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+      security:
+      - bearerAuth: []
+    patch:
+      tags:
+      - UserCredentials
+      operationId: userCredentialPatch
+      parameters:
+      - $ref: '#/components/parameters/UserCredentialIdParameter'
+      requestBody:
+        $ref: '#/components/requestBodies/UserCredentialPatchRequestBody'
+      responses:
+        200:
+          $ref: '#/components/responses/UserCredentialDetailResponse'
+        404:
+          description: UserCredential not found
         401:
           description: Unauthorized
         403:
@@ -2995,6 +3135,151 @@ components:
       format: double
     UserAuthSessionPersistentField:
       type: boolean
+    UserCredentialCreateSchema:
+      type: object
+      properties:
+        accountID:
+          type: string
+          examples:
+          - account_7nL3xQ2v
+        email:
+          type: string
+          examples:
+          - john.doe@example.com
+        password:
+          type: string
+          examples:
+          - correct-horse-battery-staple
+      required:
+      - accountID
+      - email
+      - password
+      minProperties: 3
+    UserCredentialDetailSchema:
+      type: object
+      properties:
+        id:
+          type: string
+          examples:
+          - credential_7nL3xQ2v
+        accountID:
+          type: string
+          examples:
+          - account_7nL3xQ2v
+        email:
+          type: string
+          examples:
+          - john.doe@example.com
+      required:
+      - id
+      - accountID
+      - email
+      minProperties: 3
+    UserCredentialListItemSearchQuerySchema:
+      type: object
+      properties:
+        page:
+          $ref: '#/components/schemas/SearchPageSchema'
+        sort:
+          type: array
+          items:
+            type: object
+            properties:
+              field:
+                type: string
+                enum:
+                - accountID
+                - email
+                examples:
+                - accountID
+              direction:
+                $ref: '#/components/schemas/SortDirection'
+            required:
+            - field
+            - direction
+            minProperties: 2
+          minItems: 0
+          uniqueItems: false
+        filters:
+          type: object
+          properties:
+            search:
+              $ref: '#/components/schemas/UserCredentialSearchField'
+            accountID:
+              $ref: '#/components/schemas/UserCredentialAccountIdField'
+          minProperties: 0
+      required:
+      - page
+      - filters
+      minProperties: 2
+    UserCredentialSearchField:
+      type: string
+      examples:
+      - foo
+    UserCredentialAccountIdField:
+      type: string
+      examples:
+      - account_7nL3xQ2v
+    UserCredentialListItemSearchSchema:
+      type: object
+      properties:
+        query:
+          $ref: '#/components/schemas/UserCredentialListItemSearchQuerySchema'
+        data:
+          type: object
+          properties:
+            items:
+              type: array
+              items:
+                $ref: '#/components/schemas/UserCredentialListItemSchema'
+              minItems: 0
+              uniqueItems: false
+            total:
+              type: integer
+              examples:
+              - 123
+          required:
+          - items
+          - total
+          minProperties: 2
+      required:
+      - query
+      - data
+      minProperties: 2
+    UserCredentialListItemSchema:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/UserCredentialIdField'
+        accountID:
+          $ref: '#/components/schemas/UserCredentialAccountIdField'
+        email:
+          $ref: '#/components/schemas/UserCredentialEmailField'
+      required:
+      - id
+      - accountID
+      - email
+      minProperties: 3
+    UserCredentialIdField:
+      type: string
+      examples:
+      - credential_7nL3xQ2v
+    UserCredentialEmailField:
+      type: string
+      examples:
+      - john.doe@example.com
+    UserCredentialPatchSchema:
+      type: object
+      properties:
+        email:
+          $ref: '#/components/schemas/UserCredentialEmailField'
+        password:
+          $ref: '#/components/schemas/UserCredentialPasswordField'
+      minProperties: 0
+    UserCredentialPasswordField:
+      type: string
+      examples:
+      - correct-horse-battery-staple
     UserRoleCreateSchema:
       type: object
       properties:
@@ -7145,6 +7430,24 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/UserAuthSessionListSchema'
+    UserCredentialDetailResponse:
+      description: User credential response
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/UserCredentialDetailSchema'
+    UserCredentialFiltersResponse:
+      description: UserCredential filter response
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/SearchFilterSchema'
+    UserCredentialListItemSearchSchemaSearchResponse:
+      description: Search response
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/UserCredentialListItemSearchSchema'
     UserRoleDetailResponse:
       description: UserRole response
       content:
@@ -7508,6 +7811,12 @@ components:
       schema:
         $ref: '#/components/schemas/UserAuthSessionIDField'
       description: User account session id
+    UserCredentialIdParameter:
+      name: userCredentialId
+      in: path
+      required: true
+      schema:
+        $ref: '#/components/schemas/UserCredentialIdField'
     UserRoleIdParameter:
       name: userRoleId
       in: path
@@ -7703,6 +8012,24 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/UserAccountPatchSchema'
+      required: true
+    UserCredentialRequestBody:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/UserCredentialCreateSchema'
+      required: true
+    UserCredentialUpdateRequestBody:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/UserCredentialCreateSchema'
+      required: true
+    UserCredentialPatchRequestBody:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/UserCredentialPatchSchema'
       required: true
     UserRoleRequestBody:
       content:
